<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_small_8"
            app:cardCornerRadius="@dimen/corner_radius_16">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/add_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:overScrollMode="always"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical"
                tools:context=".ui.fragments.AddFragment">

                <ImageView
                    android:id="@+id/add_close"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_margin="@dimen/spacing_small_8"
                    android:background="@drawable/background_circle"
                    android:contentDescription="@string/close_card"
                    android:src="@drawable/ic_close_24"
                    app:layout_constraintBottom_toTopOf="@+id/add_title_input"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/line_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.35" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/add_title_input"
                    style="@style/Single"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/add_close"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/add_title_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/font19505"
                        android:hint="@string/title"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/add_price_input"
                    style="@style/Single"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/add_title_input">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/add_price_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/price"
                        android:fontFamily="@font/font19505"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/add_start_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_normal_16"
                    android:text="@string/tap_to_select"
                    android:textSize="20sp"
                    android:fontFamily="@font/font19505"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/line_1"
                    app:layout_constraintTop_toBottomOf="@id/add_price_input" />

                <TextView
                    android:id="@+id/add_start_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_normal_16"
                    android:text="@string/start_date"
                    android:fontFamily="@font/font19718"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@+id/add_start_text"
                    app:layout_constraintEnd_toStartOf="@id/line_1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/add_start_text" />

                <TextView
                    android:id="@+id/add_end_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_normal_16"
                    android:textSize="20sp"
                    android:text="@string/tap_to_select"
                    android:fontFamily="@font/font19505"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/line_1"
                    app:layout_constraintTop_toBottomOf="@+id/add_start_title" />

                <TextView
                    android:id="@+id/add_end_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_normal_16"
                    android:text="@string/end_date"
                    android:textSize="18sp"
                    android:fontFamily="@font/font19718"
                    app:layout_constraintBottom_toBottomOf="@id/add_end_text"
                    app:layout_constraintEnd_toStartOf="@id/line_1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/add_end_text" />

                <TextView
                    android:id="@+id/colorChoice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_normal_16"
                    android:gravity="center"
                    android:text="@string/tap_to_set_color"
                    android:fontFamily="@font/font19505"
                    android:textSize="20sp"
                    app:layout_constraintTop_toBottomOf="@+id/add_end_text" />

                <Button
                    android:id="@+id/apply"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_normal_16"
                    android:background="@color/blue_violet"
                    android:fontFamily="@font/font19718"
                    android:text="@string/apply"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/colorChoice"
                    tools:layout_editor_absoluteX="16dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>