<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_margin="8dp"
app:cardCornerRadius="40dp"
app:cardElevation="4dp">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/card_error"
        android:layout_width="@dimen/image_size"
        android:layout_height="@dimen/image_size"
        android:contentDescription="@string/error"
        android:src="@drawable/ic_error_24"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/card_warning"
        android:layout_width="@dimen/image_size"
        android:layout_height="@dimen/image_size"
        android:src="@drawable/ic_warning_24"
        android:visibility="gone"
        android:contentDescription="@string/warning"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.6" />

    <TextView
        android:id="@+id/card_days_left"
        android:layout_width="@dimen/days_left_size"
        android:layout_height="@dimen/days_left_size"
        android:layout_marginStart="@dimen/spacing_normal_16"
        android:gravity="center"
        android:textColor="#000"
        android:textSize="40sp"
        android:fontFamily="@font/font19514"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars"
        tools:text="389" />

    <TextView
        android:id="@+id/card_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_normal_16"
        android:layout_marginTop="@dimen/spacing_normal_16"
        android:layout_marginEnd="@dimen/spacing_normal_16"
        android:gravity="center"
        android:fontFamily="@font/font19718"
        android:lines="1"
        android:textColor="#000"
        android:textSize="24sp"
        android:text="@string/summary"
        app:layout_constraintBottom_toTopOf="@+id/card_price_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/card_days_left"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/card_price_hint"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/spacing_normal_16"
        android:layout_marginTop="@dimen/spacing_normal_16"
        android:fontFamily="@font/font19505"
        android:text="@string/price_hint"
        android:textColor="#000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/card_cost_hint"
        app:layout_constraintStart_toEndOf="@+id/card_days_left"
        app:layout_constraintTop_toBottomOf="@id/card_title" />

    <TextView
        android:id="@+id/card_price"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/spacing_normal_16"
        android:textColor="#000"
        android:textSize="20sp"
        android:fontFamily="@font/font19505"
        app:layout_constraintBottom_toBottomOf="@+id/card_price_hint"
        app:layout_constraintStart_toEndOf="@+id/line_1"
        app:layout_constraintTop_toBottomOf="@+id/card_title"
        tools:text="100$" />

    <TextView
        android:id="@+id/card_cost_hint"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/spacing_normal_16"
        android:layout_marginTop="@dimen/spacing_normal_16"
        android:fontFamily="@font/font19505"
        android:text="Need money:"
        android:textColor="#000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/card_end_hint"
        app:layout_constraintStart_toEndOf="@+id/card_days_left"
        app:layout_constraintTop_toBottomOf="@id/card_price_hint" />

    <TextView
        android:id="@+id/card_cost"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/spacing_normal_16"
        android:textColor="#000"
        android:textSize="20sp"
        android:fontFamily="@font/font19505"
        app:layout_constraintBottom_toBottomOf="@+id/card_cost_hint"
        app:layout_constraintStart_toEndOf="@+id/line_1"
        app:layout_constraintTop_toBottomOf="@+id/card_price"
        tools:text="100$" />

    <TextView
        android:id="@+id/card_end_hint"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_margin="@dimen/spacing_normal_16"
        android:fontFamily="@font/font19505"
        android:text="@string/end"
        android:textColor="#000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/card_days_left"
        app:layout_constraintTop_toBottomOf="@+id/card_cost_hint" />

    <TextView
        android:id="@+id/card_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:textSize="20sp"
        android:fontFamily="@font/font19505"
        app:layout_constraintBottom_toBottomOf="@+id/card_end_hint"
        app:layout_constraintStart_toEndOf="@+id/line_1"
        app:layout_constraintTop_toTopOf="@+id/card_end_hint"
        tools:text="@tools:sample/date/ddmmyy" />
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>